--- a/app/styles/components/layout/gap.scss
+++ b/app/styles/components/layout/gap.scss
@@ -108,10 +108,6 @@ gap {
 			height:100px;
 		}
 
-		@include media(max-width-642) {
-			height:150px;
-		}
-
 	}
 
 	&[dji] {
